# DTK

./: .editorconfig  .gitignore  Makefile.am  README.md  configure.ac
.github/workflows/: build.yml
docs/: credits.md
example/: Makefile.am  hello.c
include/: dtk.h
include/dtk/: application.h  widget.h  window.h
include/dtk/data/: vector.h
include/dtk/utils/: vector.h
include/dtk/widget/: button.h
src/: Makefile.am  application.c  window.c
src/utils/: vector.c
src/widget/: button.c
